<resources>
    <string name="app_name">Submission2Kotlin</string>
    <string name="prev_match">Prev Match</string>
    <string name="next_match">Next Match</string>
    <string name="favorites">Favorites</string>
    <array name="match">
        <item>Prev Match</item>
        <item>Next Match</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arsenal">Arsenal</string>
    <string name="nol">0</string>
    <string name="date">08/08/2018</string>
    <string name="chelsea">Chelsea</string>
    <string name="vs">VS</string>
    <string name="shots">Shots</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="lineup">Lineup</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midField">MidField</string>
    <string name="forward">Forward</string>
    <string name="subtitutes">Subtitutes</string>
</resources>
